# local_sent

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  desktop-bundles.yml
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/scripts/: prepare-cli-bin.mjs
desktop/src/: main.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
scripts/: inspect-release.cjs  release-current.cjs
src/: cli.ts  constants.ts  discovery.ts  doctor.ts  i18n.ts  protocol.ts  tlsTrust.ts  transfer.ts  utils.ts
tests/: e2e.test.ts
tests/fixtures/: tls-a-cert.pem  tls-a-key.pem  tls-b-cert.pem  tls-b-key.pem
