[package]
name = "local_sent_desktop"
version = "0.1.0"
description = "Desktop GUI for local-sent"
authors = ["local-sent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
if-addrs = "0.13"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
